--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build with Gradle
-        run: ./gradlew build --info
+        run: ./gradlew :dagpenger:build --info
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
