sett port til 8080
Co-authored-by: André Roaldseth <andre.roaldseth@nav.no>
Co-authored-by: Knut Riise <knut.magne.riise@nav.no>

--- a/dagpenger/nais/nais.yaml
+++ b/dagpenger/nais/nais.yaml
@@ -8,7 +8,7 @@ metadata:
     app: {{app}}
 spec:
   image: {{image}}
-  port: 3000
+  port: 8080
   liveness:
     path: /isAlive
     timeout: 1
@@ -30,3 +30,7 @@ spec:
     requests:
       cpu: 300m
       memory: 512Mi
+  env:
+    - name: PORT
+      value: 8080
+
