--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,5 +1,10 @@
 name: Vulnerabilities scanning of dependencies
-on: push
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   security:
     runs-on: ubuntu-latest
