--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,9 +1,8 @@
 name: Vulnerabilities scanning of dependencies
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron:  '0 9 * * *'
 
 jobs:
   security:
