--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,17 +1,14 @@
-name: reviewdog
+name: Check code style violations
 on: [push]
 
 jobs:
   code-style-violations:
-    name: Check coding style violations
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-        with:
-          fetch-depth: 1
-      - name: ktlint
+        uses: actions/checkout@v2
+
+      - name: Run ktlint
         uses: ScaCap/action-ktlint@master
         with:
           github_token: ${{ secrets.github_token }}
