--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -1,4 +1,4 @@
-name: Build and deploy API
+name: API - Build and deploy
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build:
-    name: Build and Publish Docker image
+    name: Build and publish Docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
