--- a/dagpenger/nais/nais.yaml
+++ b/dagpenger/nais/nais.yaml
@@ -33,4 +33,7 @@ spec:
   env:
     - name: PORT
       value: "8080"
-
+  accessPolicy:
+    inbound:
+      rules:
+        - application: dp-quizshow
