--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -94,3 +94,17 @@ jobs:
           RESOURCE: nais/alerts.yaml,nais/nais.yaml
           VARS: nais/prod/vars.yaml
           PRINT_PAYLOAD: true
+
+  reportFailure:
+    name: Report build failure to Slack
+    needs: [build]
+    #if: job.status == "failure"
+    runs-on: ubuntu-latest
+    steps:
+      run: |
+        curl -X POST --data-urlencode "payload={\"channel\": \"$CHANNEL\", \"username\": \"$USERNAME\", \"text\": \"$MESSAGE\", \"icon_emoji\": \":neutral_face:\"}" $WEBHOOK_URL
+      env:
+        USERNAME: "Github Actions"
+        MESSAGE: "The build is broken!"
+        CHANNEL: "#team-dagpenger-quizshow"
+        WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
