--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -97,12 +97,12 @@ jobs:
 
   reportFailure:
     name: Report build failure to Slack
-    needs: [build]
+    needs: [ build ]
     if: ${{ failure() }}
     runs-on: ubuntu-latest
     steps:
       - run: |
-          curl -X POST --data-urlencode "payload={\"channel\": \"$CHANNEL\", \"username\": \"$USERNAME\", \"text\": \"$MESSAGE\", \"icon_emoji\": \":rotating_light:\"}" $WEBHOOK_URL
+          curl -X POST --data-urlencode "payload={\"channel\": \"$CHANNEL\", \"username\": \"$USERNAME\", \"text\": \"$MESSAGE\", \"icon_emoji\": \":neutral_face:\"}" $WEBHOOK_URL
         env:
           USERNAME: "Github Actions"
           MESSAGE: "The build is broken!"
