--- a/docker-compose-demo.yml
+++ b/docker-compose-demo.yml
@@ -20,8 +20,20 @@ services:
       - "9092:9092"
       - "9101:9101"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_CREATE_TOPICS: "privat-dagpenger-behov-v2"
+      KAFKA_LISTENERS: kafka://:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: kafka:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: kafka
+      KAFKA_CREATE_TOPICS: "private-dagpenger-behov-v2:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  dp-quiz:
+    image: docker.pkg.github.com/navikt/dp-quiz/dp-quiz-api:latest
+    depends_on:
+      - kafka
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_BOOTSTRAP_SERVERS: kafka://kafka:9092
+
+
 
 
