--- a/docker-compose-demo.yml
+++ b/docker-compose-demo.yml
@@ -33,7 +33,14 @@ services:
       - "8080:8080"
     environment:
       KAFKA_BOOTSTRAP_SERVERS: kafka://kafka:9092
-
-
+  dp-quizshow:
+    image: docker.pkg.github.com/navikt/dp-quizshow/dp-quizshow:latest
+    depends_on:
+      - dp-quiz
+    ports:
+      - "3000:3000"
+    environment:
+      BASE_PATH: /arbeid/dagpenger/quizshow
+      API_BASE_URL: http://dp-quiz:8080
 
 
