Revert "Debug build failure. Try to clean before build"
This reverts commit e6b13364b0f7f02c921cdfcce07b0c68dd6da54f.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build with Gradle
-        run: ./gradlew clean build --info
+        run: ./gradlew build --info
 
