Lage databaseinstanser i GCP navngitt 'quiz'
Co-authored-by: Giao The Cung <giaothe@gmail.com>

--- a/mediator/nais/dev/vars.yaml
+++ b/mediator/nais/dev/vars.yaml
@@ -2,3 +2,5 @@ app: dp-quiz-mediator
 namespace: teamdagpenger
 team: teamdagpenger
 alerts_slack_channel: "#team-dagpenger-alert-non-prod"
+db_tier: db-n1-standard-1
+db_size: 10
