Spesifiserte riktig tier-string ref https://cloud.google.com/sql/docs/postgres/create-instance#machine-types
Co-authored-by: Giao The Cung <giaothe@gmail.com>

--- a/mediator/nais/dev/vars.yaml
+++ b/mediator/nais/dev/vars.yaml
@@ -2,5 +2,5 @@ app: dp-quiz-mediator
 namespace: teamdagpenger
 team: teamdagpenger
 alerts_slack_channel: "#team-dagpenger-alert-non-prod"
-db_tier: db-n1-standard-1
+db_tier: db-custom-1-3840
 db_size: 10
