--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -35,6 +35,8 @@ spec:
   env:
     - name: PORT
       value: "8080"
+    - name: KAFKA_PREFER_ON_PREM
+      value: "true"
   filesFrom:
     - secret: serviceuser-srvdp-quiz-mediator
       mountPath: "/var/run/secrets/nais.io/service_user"
