kafka over på aiven todo: rapids and rivers config navikt/dagpenger#692
Co-authored-by: Andreas Nygård Bergh <andreas.nygard.bergh@nav.no>
Co-authored-by: Geir André Lund <geir.andre.lund@nav.no>
Co-authored-by: Giao The Cung <giaothe@gmail.com>

--- a/mediator/nais/dev/vars.yaml
+++ b/mediator/nais/dev/vars.yaml
@@ -4,3 +4,4 @@ team: teamdagpenger
 alerts_slack_channel: "#team-dagpenger-alert-non-prod"
 db_tier: db-custom-1-3840
 db_size: 10
+kafka_pool: nav-dev
