--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -2,8 +2,8 @@ name: Mediator - Build and deploy
 on: [push]
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/dp-quiz-mediator:${{ github.sha }}
-  LATEST_IMAGE: docker.pkg.github.com/${{ github.repository }}/dp-quiz-mediator:latest
+  IMAGE: ghcr.io/${{ github.repository }}/dp-quiz-mediator:${{ github.sha }}
+  LATEST_IMAGE: ghcr.io/${{ github.repository }}/dp-quiz-mediator:latest
 
 jobs:
   build:
@@ -31,21 +31,26 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew :mediator:build --info
 
-      - name: Login to GitHub Package Repository
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        env:
-          DOCKER_BUILDKIT: 1
-        run: |
-          docker build mediator -t ${{ env.IMAGE }} -t ${{ env.LATEST_IMAGE }}
-          docker push ${{ env.IMAGE }}
-          docker push ${{ env.LATEST_IMAGE }}
-
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          builder: ${{ steps.buildx.outputs.name }}
+          tags: ${{ env.IMAGE }},${{ env.LATEST_IMAGE }}
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Archive NAIS yaml
         if: github.ref == 'refs/heads/main'
