--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -48,6 +48,7 @@ jobs:
           context: .
           builder: ${{ steps.buildx.outputs.name }}
           tags: ${{ env.IMAGE }},${{ env.LATEST_IMAGE }}
+          file: mediator/Dockerfile
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
