--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -45,10 +45,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: mediator
           builder: ${{ steps.buildx.outputs.name }}
           tags: ${{ env.IMAGE }},${{ env.LATEST_IMAGE }}
-          file: mediator/Dockerfile
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
