--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: nais/nais.yaml
+          RESOURCE: nais/nais.yaml, nais/alerts.yaml
           VARS: nais/dev/vars.yaml
           PRINT_PAYLOAD: true
 
@@ -95,7 +95,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: nais/nais.yaml
+          RESOURCE: nais/nais.yaml, nais/alerts.yaml
           VARS: nais/prod/vars.yaml
           PRINT_PAYLOAD: true
 
