--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -1,11 +1,11 @@
 apiVersion: nais.io/v1alpha1
 kind: Application
 metadata:
-  name: dp-quiz-mediator
+  name: {{ app }}
   namespace: teamdagpenger
   labels:
     team: teamdagpenger
-    app: dp-quiz-mediator
+    app: {{ app }}
 spec:
   image: {{image}}
   port: 8080
