--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -62,7 +62,7 @@ jobs:
   deploy-dev:
     name: Deploy to dev
     needs: [ build ]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature/gjenopptak-prosess'
     runs-on: ubuntu-latest
     steps:
       - name: Fetch NAIS yaml
