--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -53,7 +53,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Archive NAIS yaml
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/feature/gjenopptak-prosess'
         uses: actions/upload-artifact@v1
         with:
           name: nais-yaml
