--- a/.github/workflows/deployMediator.yml
+++ b/.github/workflows/deployMediator.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew :mediator:build --info
 
+      - name: Publish results (unit test)
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        with:
+          files: "**/build/test-results/test/TEST-*.xml"
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
