--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,9 +1,5 @@
 name: Vulnerabilities scanning of dependencies
-
-on:
-  schedule:
-    - cron:  '0 9 * * *'
-
+on: push
 jobs:
   security:
     runs-on: ubuntu-latest
@@ -11,9 +7,13 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/gradle@master
+      uses: snyk/actions/gradle-jdk11@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: monitor
-        args: --configuration-attributes=usage:java-runtime --project-name=${{ github.repository }} --remote-repo-url=https://github.com/${{ github.repository }}.git
+        args: |
+          --configuration-attributes=usage:java-runtime
+          --project-name=${{ github.repository }}
+          --remote-repo-url=https://github.com/${{ github.repository }}.git
+          --org=teamdagpenger
