Skrudde på  point-in-time recovery for databasen i prod DAG-82
Lenker:
- https://cloud.google.com/sql/docs/postgres/backup-recovery/pitr
- https://doc.nais.io/nais-application/application/#gcpsqlinstancespointintimerecovery
- https://cloud.google.com/sql/docs/postgres/backup-recovery/backups,

--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -51,6 +51,8 @@ spec:
         highAvailability: false
         diskSize: {{ db_size }}
         diskAutoresize: true
+        pointInTimeRecovery: true
+        retainedBackups: {{ point_in_time_recovery_days }}
         autoBackupTime: "03:00"
         databases:
           - name: quiz
