Både Quiz og Soknad starter, og får kjørt sine Flyway-scripts.
DAG-272

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,5 +1,12 @@
 DB_USERNAME=testuser
 DB_PASSWORD=testpassword
-DB_DATABASE=testdb
+DB_NAME_QUIZ=quiztestdb
+DB_NAME_SOKNAD=soknadtestdb
 DB_PORT=5432
 DB_HOST=postgres
+
+KAFKA_BOOTSTRAP_SERVERS=kafka://kafka:9092
+
+PDL_API_URL=http://pdl.dummy
+PDL_AUDIENCE=pdlDummyAudience
+DP_PROXY_URL=http://proxy.dummy
