--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -10,3 +10,9 @@ KAFKA_BOOTSTRAP_SERVERS=kafka://kafka:9092
 PDL_API_URL=http://pdl.dummy
 PDL_AUDIENCE=pdlDummyAudience
 DP_PROXY_URL=http://proxy.dummy
+
+TOKEN_X_CLIENT_ID=tokenx
+TOKEN_X_WELL_KNOWN_URL=http://host.docker.internal:8080/${TOKEN_X_CLIENT_ID}/.well-known/openid-configuration
+
+AZURE_APP_CLIENT_ID=azure
+AZURE_APP_WELL_KNOWN_URL=http://host.docker.internal:8080/${AZURE_APP_CLIENT_ID}/.well-known/openid-configuration
