--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -65,6 +65,14 @@ services:
     environment:
       DB_DATABASE: ${DB_NAME_SOKNAD}
       DB_USERNAME: "${DB_NAME_SOKNAD}-user"
+      NAIS_CLUSTER_NAME: "dev-gcp"
+
+  mock-oauth2-server:
+    image: ghcr.io/navikt/mock-oauth2-server:0.4.8
+    container_name: oauth
+    ports:
+      - 8082:8080
+    hostname: host.docker.internal
 
 #  dp-quizshow:
 #    image: docker.pkg.github.com/navikt/dp-quizshow/dp-quizshow:latest
