--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -67,6 +67,7 @@ services:
       DB_DATABASE: ${DB_NAME_SOKNAD}
       DB_USERNAME: "${DB_NAME_SOKNAD}-user"
       NAIS_CLUSTER_NAME: "dev-gcp"
+      KAFKA_RESET_POLICY: "earliest"
 
   oauth:
     image: ghcr.io/navikt/mock-oauth2-server:0.4.8
