--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -59,7 +59,7 @@ services:
     depends_on:
       - kafka
       - postgres
-      - oauth
+      - auth
     ports:
       - "8081:8080"
     env_file: .env
@@ -68,10 +68,11 @@ services:
       DB_USERNAME: "${DB_NAME_SOKNAD}-user"
       NAIS_CLUSTER_NAME: "dev-gcp"
       KAFKA_RESET_POLICY: "earliest"
+      TOKEN_X_CLIENT_ID: "localhost:teamdagpenger:dp-soknad"
 
-  oauth:
-    image: ghcr.io/navikt/mock-oauth2-server:0.5.1
-    container_name: oauth
+  auth:
+    image: ghcr.io/navikt/fakedings/fakedings:b1244f187badb294b47e0e3c3042abec91e04658
+    container_name: auth
     ports:
       - 8080:8080
     hostname: host.docker.internal
