--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Build and deploy
-on: [push]
+on: [ push ]
 
 env:
   IMAGE: ghcr.io/${{ github.repository }}/dp-quiz-mediator:${{ github.sha }}
@@ -10,26 +10,18 @@ jobs:
     name: Build and publish Docker image
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Java
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          java-version: '17.x'
+          distribution: temurin
+          java-version: 17
 
-      - name: Setup gradle dependency cache
-        uses: actions/cache@v2
+      - uses: gradle/gradle-build-action@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', 'buildSrc/src/main/kotlin/Constants.kt') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+          arguments: --configuration-cache check build installDist
 
       - name: Build with Gradle
-        run: ./gradlew build --info
+        run: ./gradlew build installDist --info
 
       - name: Publish results (unit test)
         uses: EnricoMi/publish-unit-test-result-action@v1
@@ -37,7 +29,6 @@ jobs:
           files: "**/build/test-results/test/TEST-*.xml"
 
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to GitHub Container Registry
