Skru av configuration-cache fordi spotless er ukompatibel

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: --configuration-cache check build installDist
+          # arguments: --configuration-cache
+          arguments: check build installDist
 
       - name: Build with Gradle
         run: ./gradlew build installDist --info
