--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -13,20 +13,21 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   kafka:
-    image: wurstmeister/kafka:latest
-    hostname: kafka
     container_name: kafka
-    depends_on:
-      - zookeeper
+    image: "confluentinc/cp-kafka:6.2.0"
     ports:
       - "9092:9092"
-      - "9101:9101"
+      - "29092:29092"
+    depends_on:
+      - zookeeper
     environment:
-      KAFKA_LISTENERS: kafka://:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: kafka:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: kafka
-      KAFKA_CREATE_TOPICS: "teamdagpenger.rapid.v1:1:1,teamdagpenger.journalforing.v1:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: "0"
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: "1"
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: "1"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
 
   postgres:
     container_name: postgres
