--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -73,6 +73,17 @@ services:
       KAFKA_RESET_POLICY: "earliest"
       TOKEN_X_CLIENT_ID: "localhost:teamdagpenger:dp-soknad"
 
+  quizmock:
+    image: ghcr.io/navikt/dp-mock-quiz-behovloser:b4390d6dafaa040ddee9b761f452cb0f86f8cddc
+    container_name: quizmock
+    depends_on:
+      - kafka
+    ports:
+      - "8083:8080"
+    env_file: .env
+    environment:
+      KAFKA_RESET_POLICY: "earliest"
+
   auth:
     image: ghcr.io/navikt/mock-oauth2-server:0.5.1
     container_name: auth
