Legg til dp-quiz-birgitte i docker-compose slik at registerbarnbehov blir løst riktig ved lokal kjøring
Co-authored-by: Geir André Lund <geir.andre.lund@nav.no>

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -84,6 +84,18 @@ services:
     environment:
       KAFKA_RESET_POLICY: "earliest"
 
+
+  birgitte:
+    image: ghcr.io/navikt/dp-quiz-birgitte/dp-quiz-birgitte:latest
+    container_name: birgitte
+    depends_on:
+      - kafka
+    ports:
+      - "8084:8080"
+    env_file: .env
+    environment:
+      KAFKA_RESET_POLICY: "earliest"
+
   auth:
     image: ghcr.io/navikt/mock-oauth2-server:0.5.1
     container_name: auth
