Inline-er json-config for mock-en i selve docker-oppsettet.
Dette gjør det enklere å gjøre tilpassninger etterhvert.

DAG-340

Co-authored-by: Marius Eriksen <marius.eriksen@nav.no>

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -103,7 +103,10 @@ services:
       - "8080:8080"
     hostname: host.docker.internal
     environment:
-      JSON_CONFIG: "{\"interactiveLogin\":true}"
+      JSON_CONFIG: >
+        {
+            "interactiveLogin": true
+        }
 
   wonderwall:
     image: ghcr.io/nais/wonderwall:latest
