--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -84,7 +84,6 @@ services:
     environment:
       KAFKA_RESET_POLICY: "earliest"
 
-
   birgitte:
     image: ghcr.io/navikt/dp-quiz-birgitte/dp-quiz-birgitte:latest
     container_name: birgitte
@@ -105,7 +104,24 @@ services:
     environment:
       JSON_CONFIG: >
         {
-            "interactiveLogin": true
+            "interactiveLogin": true,
+            "httpServer": "NettyWrapper",
+            "tokenCallbacks": [
+                {
+                    "issuerId": "idporten",
+                    "tokenExpiry": 3600,
+                    "requestMappings": [
+                        {
+                            "requestParam": "scope",
+                            "match": "*",
+                            "claims": {
+                                "sub": "12345678901",
+                                "pid": "12345678901"
+                            }
+                        }
+                    ]
+                }
+            ]
         }
 
   wonderwall:
