--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -7,13 +7,13 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/gradle-jdk11@master
+      uses: snyk/actions/gradle-jdk17@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: monitor
         args: |
-          --configuration-attributes=usage:java-runtime
-          --project-name=${{ github.repository }}
+          --org=teamdagpenger \
+          --all-sub-projects \
+          --configuration-attributes=usage:java-runtime \
           --remote-repo-url=https://github.com/${{ github.repository }}.git
-          --org=teamdagpenger
