--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,22 +18,15 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2
         with:
-          # arguments: --configuration-cache
-          arguments: check build installDist
-
-      - name: Build with Gradle
-        run: ./gradlew build installDist --info
+          arguments: --configuration-cache build installDist
 
       - name: Publish results (unit test)
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           junit_files: "**/build/test-results/test/TEST-*.xml"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -43,70 +36,36 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: mediator
-          builder: ${{ steps.buildx.outputs.name }}
           tags: ${{ env.IMAGE }},${{ env.LATEST_IMAGE }}
           pull: true
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Archive NAIS yaml
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v3
-        with:
-          name: nais-yaml
-          path: mediator/nais
-
   deploy-dev:
-    name: Deploy to dev
     needs: [ build ]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch NAIS yaml
-        uses: actions/download-artifact@v3
-        with:
-          name: nais-yaml
-          path: nais
-
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: nais/nais.yaml
-          VARS: nais/dev/vars.yaml
+          RESOURCE: mediator/nais/nais.yaml
+          VARS: mediator/nais/dev/vars.yaml
           PRINT_PAYLOAD: true
 
   deploy-prod:
-    name: Deploy to Production
-    needs: [ build, deploy-dev ]
+    needs: [ build ]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch NAIS yaml
-        uses: actions/download-artifact@v3
-        with:
-          name: nais-yaml
-          path: nais
-
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: nais/nais.yaml
-          VARS: nais/prod/vars.yaml
+          RESOURCE: mediator/nais/nais.yaml
+          VARS: mediator/nais/prod/vars.yaml
           PRINT_PAYLOAD: true
-
-  reportFailure:
-    name: Report build failure to Slack
-    needs: [ build ]
-    if: ${{ failure() }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          curl -X POST --data-urlencode "payload={\"channel\": \"$CHANNEL\", \"username\": \"$USERNAME\", \"text\": \"$MESSAGE\", \"icon_emoji\": \":neutral_face:\"}" $WEBHOOK_URL
-        env:
-          USERNAME: "Github Actions"
-          MESSAGE: "The build is broken!"
-          CHANNEL: "#team-dagpenger-build"
-          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
