Skaler opp til flere pods med en egen HPA som måler lag på Kafka topic

--- a/mediator/nais/dev/vars.yaml
+++ b/mediator/nais/dev/vars.yaml
@@ -3,5 +3,10 @@ namespace: teamdagpenger
 team: teamdagpenger
 db_tier: db-custom-1-3840
 db_size: 10
-kafka_pool: nav-dev
+kafka:
+  pool: nav-dev
+  consumer_group_id: dp-quiz-mediator
 point_in_time_recovery_days: 2
+replicas:
+  min: 2
+  max: 6
