--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -22,9 +22,7 @@ spec:
   prometheus:
     enabled: false
   replicas:
-    min: 1
-    max: 1
-    cpuThresholdPercentage: 75
+    disableAutoScaling: true
   resources:
     limits:
       cpu: 1500m
@@ -39,11 +37,13 @@ spec:
       value: "8080"
     - name: JAVA_OPTS
       value: -XX:+UseG1GC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
+    - name: KAFKA_CONSUMER_GROUP_ID
+      value: {{kafka.consumer_group_id}}
   filesFrom:
     - secret: serviceuser-srvdp-quiz-mediator
       mountPath: "/var/run/secrets/nais.io/service_user"
   kafka:
-    pool: {{ kafka_pool }}
+    pool: {{kafka.pool}}
   gcp:
     sqlInstances:
       - name: dp-quiz-mediator
