Revert "Skaler opp til flere pods med en egen HPA som måler lag på Kafka topic"
This reverts commit 3a4f4f6a4cc53ca97d1e8663520ddb35d1f637c1.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: mediator/nais/nais.yaml,mediator/nais/hpa.yaml
+          RESOURCE: mediator/nais/nais.yaml
           VARS: mediator/nais/dev/vars.yaml
           PRINT_PAYLOAD: true
 
@@ -66,6 +66,6 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: mediator/nais/nais.yaml,mediator/nais/hpa.yaml
+          RESOURCE: mediator/nais/nais.yaml
           VARS: mediator/nais/prod/vars.yaml
           PRINT_PAYLOAD: true
