--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -22,7 +22,9 @@ spec:
   prometheus:
     enabled: false
   replicas:
-    disableAutoScaling: true
+    min: 1
+    max: 1
+    cpuThresholdPercentage: 75
   resources:
     limits:
       cpu: 1500m
@@ -37,13 +39,11 @@ spec:
       value: "8080"
     - name: JAVA_OPTS
       value: -XX:+UseG1GC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
-    - name: KAFKA_CONSUMER_GROUP_ID
-      value: {{kafka.consumer_group_id}}
   filesFrom:
     - secret: serviceuser-srvdp-quiz-mediator
       mountPath: "/var/run/secrets/nais.io/service_user"
   kafka:
-    pool: {{kafka.pool}}
+    pool: {{ kafka_pool }}
   gcp:
     sqlInstances:
       - name: dp-quiz-mediator
