--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -10,7 +10,7 @@ spec:
   image: {{image}}
   port: 8080
   strategy:
-    type: Recreate
+    type: RollingUpdate # Bruk kun Recreate når vi deployer store/ukompatible migreringer
   liveness:
     path: /isalive
     timeout: 1
