--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -37,7 +37,8 @@ spec:
   env:
     - name: PORT
       value: "8080"
-    #- name: JAVA_OPTS
+    - name: JAVA_OPTS
+      value: -XX:+UseZGC -XX:ActiveProcessorCount=2
     #  value: -XX:+UseG1GC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
   filesFrom:
     - secret: serviceuser-srvdp-quiz-mediator
