--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -64,3 +64,8 @@ spec:
           - name: quiz
             envVarPrefix: DB
         cascadingDelete: false
+    permissions:
+      - resource:
+          apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+          kind: Project
+        role: roles/cloudprofiler.agent
