--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -40,7 +40,7 @@ spec:
   env:
     - name: PORT
       value: "8080"
-    - name: JAVA_OPTS
+    #- name: JAVA_OPTS
     #  value: -XX:+UseZGC -XX:ActiveProcessorCount=2
     #  value: -XX:+UseG1GC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
   filesFrom:
