--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -7,9 +7,13 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/gradle-jdk17@master
+      uses: snyk/actions/gradle-jdk11@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: monitor
-        args: --org=teamdagpenger --all-sub-projects --configuration-attributes=usage:java-runtime --remote-repo-url=https://github.com/${{ github.repository }}.git
+        args: >-
+          --configuration-attributes=usage:java-runtime
+          --project-name=${{ github.repository }}
+          --remote-repo-url=https://github.com/${{ github.repository }}.git
+          --org=teamdagpenger
