Oppgrader til POSTGRES_14 nå som ressursen er synka

--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -53,7 +53,7 @@ spec:
   gcp:
     sqlInstances:
       - name: dp-quiz-mediator
-        type: POSTGRES_12 # Egentlig 14, men vanskelig å synka
+        type: POSTGRES_14
         tier: {{db.tier}}
         diskType: SSD
         highAvailability: true
