--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,13 @@
 name: Build and deploy
 on: [ push ]
 
-env:
-  IMAGE: ghcr.io/${{ github.repository }}/dp-quiz-mediator:${{ github.sha }}
-  LATEST_IMAGE: ghcr.io/${{ github.repository }}/dp-quiz-mediator:latest
-
 jobs:
   build:
     name: Build and publish Docker image
     runs-on: ubuntu-latest
+    permissions:
+      contents: "read"
+      id-token: "write"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -24,36 +23,42 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           junit_files: "**/build/test-results/test/TEST-*.xml"
-
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
+      - name: docker-build-push
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
+          team: teamdagpenger
+          push_image: true # optional, default true
+          dockerfile: Dockerfile # optional, default Dockerfile
+          docker_context: mediator # optional, default .
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+      - name: Archive NAIS yaml
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v3
         with:
-          context: mediator
-          tags: ${{ env.IMAGE }},${{ env.LATEST_IMAGE }}
-          pull: true
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          name: nais-yaml
+          path: mediator/nais
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
 
   deploy-dev:
     needs: [ build ]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Fetch NAIS yaml
+        uses: actions/download-artifact@v3
+        with:
+          name: nais-yaml
+          path: .nais
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: mediator/nais/nais.yaml
-          VARS: mediator/nais/dev/vars.yaml
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.image }}
+          VARS: .nais/dev/vars.yaml
           PRINT_PAYLOAD: true
 
   deploy-prod:
@@ -61,11 +66,16 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Fetch NAIS yaml
+        uses: actions/download-artifact@v3
+        with:
+          name: nais-yaml
+          path: .nais
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: mediator/nais/nais.yaml
-          VARS: mediator/nais/prod/vars.yaml
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.image }}
+          VARS: .nais/prod/vars.yaml
           PRINT_PAYLOAD: true
