Gi i publishing av tester
Co-authored-by: Celine Dam <celine.ten.dam@nav.no>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,10 @@ jobs:
         with:
           arguments: --configuration-cache build installDist
 
-      - name: Publish results (unit test)
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          junit_files: "**/build/test-results/test/TEST-*.xml"
+#      - name: Publish results (unit test)
+#        uses: EnricoMi/publish-unit-test-result-action@v2
+#        with:
+#          junit_files: "**/build/test-results/test/TEST-*.xml"
       - name: docker-build-push
         uses: nais/docker-build-push@v0
         id: docker-build-push
