--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           team: teamdagpenger
           push_image: true # optional, default true
           dockerfile: mediator/Dockerfile # optional, default Dockerfile
-          docker_context: . # optional, default .
+          docker_context: mediator # optional, default .
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
       - name: Archive NAIS yaml
