--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ jobs:
     name: Build and publish Docker image
     runs-on: ubuntu-latest
     permissions:
+      checks: "write"
       contents: "read"
       id-token: "write"
     steps:
