Tester ut utrullingstrategi for å teste rebalanseringsproblemantikk med `maxSurge` og `maxUnavailable` ref https://nav-it.slack.com/archives/C01DE3M9YBV/p1680273231054969 Vi har 7 podder kjørende, med `maxSurge` til 100 % og `maxUnavailable` til 99% vil 6 podder kjøres opp og 6 podder kjøres ned når de 6 nye er oppe. Dette garanter at minst 1 pod er oppe hele tiden. Mulig vi skal ha flere enn 1 pod oppe ved å justere `maxUnavailable`

--- a/mediator/nais/nais.yaml
+++ b/mediator/nais/nais.yaml
@@ -10,7 +10,9 @@ spec:
   image: {{image}}
   port: 8080
   strategy:
-    type: RollingUpdate # Bruk kun Recreate når vi deployer store/ukompatible migreringer
+    rollingUpdate:  # Bruk kun Recreate når vi deployer store/ukompatible migreringer
+      maxSurge: 100%
+      maxUnavailable: 99%
   liveness:
     path: /isalive
     timeout: 1
