--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/gradle,kotlin,intellij+all,macos
 
 mediator/grafer
+
+current_soknads_id
