--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
 
   deploy-dev:
     needs: [ build ]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/fjerne-spørsmål-om-reberegning'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
