--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
 
   deploy-dev:
     needs: [ build ]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/task/endre-mulig-gjenopptak-sjekk'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
