Oppgrader til Gradle 8.7 og JVM 21
Tuner også litt JVM GC

--- a/mediator/.nais/nais.yaml
+++ b/mediator/.nais/nais.yaml
@@ -42,7 +42,7 @@ spec:
     - name: PORT
       value: "8080"
     - name: JAVA_OPTS
-      value: -XX:+UseZGC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
+      value: -XX:+UseParallelGC -XX:MaxRAMPercentage=50.0 -XX:ActiveProcessorCount=4
     #- name: JAVA_OPTS
     #  value: -XX:+UseZGC -XX:ActiveProcessorCount=2
     #  value: -XX:+UseG1GC -XX:MaxRAMPercentage=75.0 -XX:ActiveProcessorCount=2
